0.3.5
-----

* Remove name `TreeBlob`, split into `DynamicTreeBlob` and `FixedTreeBlob`

0.3.1
-----

* 2024-04-23: Improve compositor's performance.

0.3.0
-----

* 2024-04-23: Separate entity-related stateful data and behaviors (and structure of them)

0.2.3
-----

* 2024-04-16: Make Builder a template class
* 2024-04-16: Add an example to make a OnSignal decorator.

0.2.2
-----

* 2024-04-15: Use unsigned int instead of uint

0.2.1
-----

* 2024-04-14: Remove optional child/children parameters for builder methods.

0.2.0
-----

* 2024-04-11: Add priority compositor support.
* 2024-04-11: Add random selector support.

0.1.0
-----

* 2024-04-10: first release.